Fix: Preferences header flips position after installing Addon #57724

Closed
opened 2018-11-08 19:52:28 +01:00 by William Reynish · 16 comments

Rather bizarrely, the header of the Preferences flips position after the user installs an addon:

image.png

Rather bizarrely, the header of the Preferences flips position after the user installs an addon: ![image.png](https://archive.blender.org/developer/F5446110/image.png)
Added subscribers: @WilliamReynish, @ideasman42, @RamiroCantu, @Regnas

Added subscriber: @natecraddock

Added subscriber: @natecraddock

This issue I'm seeing with changing workspaces when the user preferences is open may be related? The user preferences switches to 3D view.

preferences-problem.gif

This issue I'm seeing with changing workspaces when the user preferences is open may be related? The user preferences switches to 3D view. ![preferences-problem.gif](https://archive.blender.org/developer/F5603273/preferences-problem.gif)

@Zachman: Wow, that's a hilarious bug. Not sure if it is related though - probably not.

@Zachman: Wow, that's a hilarious bug. Not sure if it is related though - probably not.

@WilliamReynish Okay, should I report it somewhere else then? Or are you going to add this to the papercuts?

@WilliamReynish Okay, should I report it somewhere else then? Or are you going to add this to the papercuts?

@Zachman: I added it here: #57894

However, some of these things like this are really more bugs and glitches than UI paper cuts. I added it for now, but maybe it's not quite correct to add these kinds of things to this list.

@Zachman: I added it here: #57894 However, some of these things like this are really more bugs and glitches than UI paper cuts. I added it for now, but maybe it's not quite correct to add these kinds of things to this list.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
William Reynish self-assigned this 2018-11-26 23:01:18 +01:00

This is no longer an issue with the new Preferences implementation.

This is no longer an issue with the new Preferences implementation.

Added subscriber: @rboxman

Added subscriber: @rboxman

It still flipped to the top for me after an install with most recent git pull. Can anyone else still repro?

It still flipped to the top for me after an install with most recent git pull. Can anyone else still repro?

It flips to the top for me as well.

It flips to the top for me as well.

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

You are right. Reopened.

You are right. Reopened.

Added subscriber: @slumber

Added subscriber: @slumber

This issue was referenced by cb6d018ec9

This issue was referenced by cb6d018ec9496912943726a0c45829cf8b7c6696

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57724
No description provided.