Fix T57724: Opening file browser flips user-prefs header